--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "@trendyol-js/react-carousel": "3.0.0",
     "body-parser": "1.20.0",
     "bootstrap": "5.2.0",
     "express": "4.18.1",
